# NanoSecondTimestamps

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  UtilTimeConfig.cmake  buildDeps.sh  buildFromDeps.sh
include/: util_time.h
src/: benchmark.cpp  util_time.cpp
test/: util_time_tests.cpp
